Fix margin on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -174,6 +174,13 @@ ul li {
   margin-top: 14px;
 }
 
+.profile-content p{
+  margin-bottom: 10px;
+}
+.profile-content ul{
+  margin-bottom: 10px;
+ }
+
 .favor-content {
   background-color: #efefef;
   border: 1px solid #dddddd;
